--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <title>Parrot Card Game</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <main><h1>PARROT CARD GAME</h1>
+    <div class="container-cartas">
+        <div class="card">
+            <div class="front-face face">
+                <img class="back" src="imagens/back.png" alt="back">
+            </div>
+            <div class="back-face face">
+                <img class="front" src="imagens/bobrossparrot.gif" alt="bobrossparrot">
+            </div>
+        </div> <!--final div card-->
+       
+    </div><!--final div container-cartas-->
+    <script src="script.js"></script>
+    </main>
 </body>
 </html>
