cartas giram onclick

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main><h1>PARROT CARD GAME</h1>
     <div class="container-cartas">
-        <div class="card">
+        <div onclick = "girar(this)"class="card">
             <div class="front-face face">
                 <img class="back" src="imagens/back.png" alt="back">
             </div>
